--- a/locales/eo.json
+++ b/locales/eo.json
@@ -106,5 +106,10 @@
     "availability_check_success": "✅ Sukcesa kontrolo pri disponebleco por '{species}'! Eroj trovitaj kaj privata mesaĝo estis sendita.",
     "availability_check_not_found": "❌ Kontrolo pri disponebleco por '{species}' finita. Neniuj kongruaj eroj disponeblas nuntempe. La peto restas aktiva.",
     "availability_check_error": "⚠️ Eraro okazis dum la kontrolo pri disponebleco por '{species}'. Bonvolu reprovi poste aŭ kontaktu la subtenon se la problemo daŭras.",
+    "feedback_question": "Ĉu vi estas kontenta aŭ ĉu vi volas daŭre ricevi sciigojn pri novaj eniroj?",
+    "feedback_positive_ack": "Bone, mi ĉesigos vian serĉon.",
+    "feedback_continue_ack": "Bone, mi daŭre informos vin.",
+    "feedback_timeout": "Via serĉo por **{species}** en `{regions}` estis fermita – neniuj reagoj ricevitaj.",
+    "reloadshops_success": "✅ Vendej-datumoj sukcese refreŝitaj.",
     "general_error": "❌ Okazis eraro"
 }
